--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "socket.io": "^4.1.2",
     "validator": "^13.6.0"
   },
   "devDependencies": {
